policies + rename of chat_channel to course_chat everywhere
