# services/triaina-backend/config/routes/course.rb
@@ -5,8 +5,8 @@ namespace :v1 do
       resources :units, controller: "courses/sections/section_units", only: [ :index, :show, :create, :destroy, :update ] do
       end
     end
-    resources :chat_channels, controller: "courses/chat_channels", only: [ :index, :show, :create, :destroy, :update ] do
-      resources :chat_messages, controller: "courses/chat_channels/chat_messages", only: [ :index, :show, :create, :destroy, :update ]
+    resources :course_chats, controller: "courses/course_chats", only: [ :index, :show, :create, :destroy, :update ] do
+      resources :chat_messages, controller: "courses/course_chats/chat_messages", only: [ :index, :show, :create, :destroy, :update ]
     end
     resources :enrollments, controller: "courses/enrollments", only: [ :index, :show, :destroy ] do
     end
